adithya/aks/app.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: aks-helloworld-two

spec:

  replicas: 1

  selector:

    matchLabels:

      app: aks-helloworld-two

  template:

    metadata:

      labels:

        app: aks-helloworld-two

    spec:

      imagePullSecrets:

      - name: acr-secret

      containers:

      - name: aks-helloworld-two

        image: aksdemoadi.azurecr.io/node-ui:20

        ports:

        - containerPort: 8080
---

apiVersion: v1

kind: Service

metadata:

  name: aks-helloworld-two  

spec:

  type: ClusterIP

  ports:

    - port: 80

      targetPort: 8080

  selector:

    app: aks-helloworld-two
